k8s/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: daggerok/k8s-ingress-explained-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8004
              protocol: TCP
              name: "webflux"
          readinessProbe:
            httpGet:
              scheme: HTTP
              port: 8004
              path: /actuator/health
          livenessProbe:
            httpGet:
              scheme: HTTP
              port: 8004
              path: /actuator/health
      restartPolicy: Always
  selector:
    matchLabels:
      app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  sessionAffinity: None
  ports:
    - port: 8004
      protocol: TCP
      name: "webflux"
      targetPort: 8004
      nodePort: 30004
  type: NodePort
---
