k8s/ingress.yaml
# Docker for mac requires:
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/mandatory.yaml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/cloud-generic.yaml
# kubectl get pods --all-namespaces -l app.kubernetes.io/name=ingress-nginx --watch
#
# Bare-metal requires:
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/mandatory.yaml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/baremetal/service-nodeport.yaml
# kubectl get pods --all-namespaces -l app.kubernetes.io/name=ingress-nginx --watch
---
# Single service ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: frontend
    servicePort: 8004
---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: k8s-nginx-ingress-example-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#spec:
#  rules:
#    - http:
#        paths:
#          - backend:
#              serviceName: frontend
#              servicePort: 8004
#---
